--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,4 +54,4 @@ AUDIT_SETTINGS_FLAG = on
 auth_key = *****
 live_domain = http://*****.aliyuncs.com
 
-package_name = ***，***，***
+package_name = com.aliyun.apsara.svideo,com.jellycloud.apsara.svideo
